[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/player_parts.png" type="Texture" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://player/trigger_zone.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/player_waiting.tres" type="Material" id=4]
[ext_resource path="res://player/clock.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 16.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.0

[sub_resource type="Animation" id=4]
resource_name = "jump"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("parts/base:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 12.5 ), Vector2( 0, 16 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("parts/top_arm:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 165.0, 150.0, 165.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("parts/back_arm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -150.0, -120.0, -150.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("parts/top_arm:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("parts/back_arm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=7]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("parts/top_arm:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -30.0, 30.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("parts/back_arm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 30.0, -30.0 ]
}

[node name="player" type="KinematicBody2D"]
use_parent_material = true
collision_layer = 2
collision/safe_margin = 0.03
script = ExtResource( 2 )
COOLDOWN = 7.0

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 1 )

[node name="trigger_zone" parent="." instance=ExtResource( 3 )]
collision_mask = 0

[node name="shape" parent="trigger_zone" index="0"]
shape = SubResource( 2 )

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="collision" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 3 )

[node name="jump_animation" type="AnimationPlayer" parent="."]
autoplay = "jump"
anims/jump = SubResource( 4 )

[node name="animation_player" type="AnimationPlayer" parent="."]
autoplay = "stand"
anims/fall = SubResource( 5 )
anims/stand = SubResource( 6 )
anims/walk = SubResource( 7 )

[node name="clock" parent="." instance=ExtResource( 5 )]
position = Vector2( 14, -14.0079 )

[node name="parts" type="Node2D" parent="."]
material = ExtResource( 4 )

[node name="base" type="Polygon2D" parent="parts"]
position = Vector2( 0, 15.8725 )
offset = Vector2( -9, -38.5 )
texture = ExtResource( 1 )
polygon = PoolVector2Array( 3, 37, 3, 40, 15, 40, 15, 37 )
uv = PoolVector2Array( 3, 37, 3, 40, 15, 40, 15, 37 )

[node name="particles" type="CPUParticles2D" parent="parts/base"]
show_behind_parent = true
position = Vector2( 0, 1.38908 )
amount = 10
lifetime = 0.5
randomness = 1.0
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 6, 1 )
direction = Vector2( 0, -1 )
spread = 180.0
angular_velocity = 133.95
angular_velocity_random = 1.0
orbit_velocity_random = 1.0
scale_amount = 3.0
scale_amount_random = 1.0
color = Color( 0.0784314, 1, 0.921569, 1 )
hue_variation = 0.05
hue_variation_random = 1.0

[node name="legs" type="Polygon2D" parent="parts"]
use_parent_material = true
position = Vector2( 0, 8 )
offset = Vector2( -9, -33 )
texture = ExtResource( 1 )
polygon = PoolVector2Array( 3, 27, 3, 36, 15, 36, 15, 27 )
uv = PoolVector2Array( 3, 27, 3, 36, 15, 36, 15, 27 )
polygons = [ PoolIntArray( 0, 3, 2, 1 ) ]
internal_vertex_count = 4

[node name="back_arm" type="Polygon2D" parent="parts"]
use_parent_material = true
position = Vector2( 4, -5 )
rotation = -2.61799
offset = Vector2( -15, -15 )
texture = ExtResource( 1 )
polygon = PoolVector2Array( 14, 14, 14, 26, 17, 26, 17, 14 )
uv = PoolVector2Array( 14, 14, 14, 26, 17, 26, 17, 14 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
internal_vertex_count = 4

[node name="body" type="Polygon2D" parent="parts"]
use_parent_material = true
offset = Vector2( -9, -20 )
texture = ExtResource( 1 )
polygon = PoolVector2Array( 5, 11, 5, 26, 13, 26, 13, 11 )
uv = PoolVector2Array( 5, 11, 5, 26, 13, 26, 13, 11 )
polygons = [ PoolIntArray( 0, 3, 2, 1 ) ]
internal_vertex_count = 4

[node name="top_arm" type="Polygon2D" parent="parts"]
use_parent_material = true
position = Vector2( -5, -5 )
rotation = 2.87979
offset = Vector2( -2, -16 )
texture = ExtResource( 1 )
polygon = PoolVector2Array( 4, 14, 0, 14, 0, 27, 4, 27 )
uv = PoolVector2Array( 4, 14, 0, 14, 0, 27, 4, 27 )
polygons = [ PoolIntArray( 0, 3, 2, 1 ) ]
internal_vertex_count = 4

[node name="head" type="Polygon2D" parent="parts"]
use_parent_material = true
position = Vector2( 0, -8 )
offset = Vector2( -9, -8 )
texture = ExtResource( 1 )
polygon = PoolVector2Array( 6, 0, 13, 10, 6, 10, 13, 0 )
uv = PoolVector2Array( 6, 0, 13, 10, 6, 10, 13, 0 )
polygons = [ PoolIntArray( 2, 1, 3, 0 ) ]
internal_vertex_count = 4

[node name="cooldown" type="Timer" parent="."]

[node name="wait_after_future" type="Timer" parent="."]
wait_time = 1.5

[node name="audio" type="AudioStreamPlayer" parent="."]

[connection signal="area_entered" from="trigger_zone" to="." method="_on_trigger_zone_area_entered"]
[connection signal="area_exited" from="trigger_zone" to="." method="_on_trigger_zone_area_exited"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="wait_after_future" to="." method="_on_wait_after_future_timeout"]

[editable path="trigger_zone"]
